--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Yummy demo</title>
     <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="img/site.webmanifest" />
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -53,7 +74,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a href="#" class="navbar-brand"> Yummy <span>.</span></a>
-        <div class="collapse navbar-collapse " id="#mymenu">
+        <div class="collapse navbar-collapse" id="#mymenu">
           <ul class="navbar-nav ms-auto fw-bold text-center">
             <li class="nav-item">
               <a href="#home" class="nav-link active fs-5">Home</a>
@@ -94,7 +115,7 @@
               <a href="#" class="nav-link fs-5">Contact</a>
             </li>
           </ul>
-          <div >
+          <div>
             <button type="button" class="btn btn-danger rounded-pill px-4 py-2">
               book a table
             </button>
@@ -103,6 +124,7 @@
       </nav>
     </header>
 
+    <!-- Section1 -->
     <section class="section1" id="home">
       <div class="container">
         <div class="row">
@@ -140,6 +162,122 @@
               class="img img-fluid ms-5 mt-5 h-75"
               alt=""
             />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about" id="about">
+      <div class="about-header">
+        <h2>ABOUT US</h2>
+        <p>Learn More <span>About Us</span></p>
+      </div>
+      <div class="row d-flex justify-content-center m-0">
+        <div class="col-6 about-img position-relative bg-1">
+          <div class="info position-absolute">
+            <h4>Book a Table</h4>
+            <p>+1 5589 55488 55</p>
+          </div>
+        </div>
+        <div class="col-5">
+          <div class="learn-more">
+            <ul>
+              <li class="pb-2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </li>
+              <li>
+                <i class="fa-solid fa-check-double"></i>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </li>
+              <br />
+              <li>
+                <i class="fa-solid fa-check-double"></i>
+                Duis aute irure dolor in reprehenderit in voluptate velit.
+              </li>
+              <br />
+              <li>
+                <i class="fa-solid fa-check-double"></i>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate trideta
+                storacalaperda mastiro dolore eu fugiat nulla pariatur. Ullamco
+                labor
+              </li>
+              <br />
+              <p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident
+              </p>
+            </ul>
+
+            <img src="img/about-2.jpg" class="img-fluid w-100" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Why Us section -->
+
+    <section class="why-choose">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div class="w-choose">
+              <h1>Why Choose Yummy?</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis
+                aute irure dolor in reprehenderit Asperiores dolores sed et.
+                Tenetur quia eos. Autem tempore quibusdam vel necessitatibus
+                optio ad corporis.
+              </p>
+              <div class="learn">
+                <a class="btn rounded-pill" type="button" href="#"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-8">
+            <div class="d-flex gap-3 mt-4">
+              <div class=" col-4">
+                <div class="tab2">
+                  <div class="icons">
+                    <i class="bi bi-clipboard-data"></i>
+                  </div>
+                  <h4>Corporis voluptates officia eiusmod</h4>
+                  <p>
+                    Consequuntur sunt aut quasi enim aliquam quae harum pariatur
+                    laboris nisi ut aliquip
+                  </p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="tab2">
+                  <div class="icons">
+                    <i class="bi bi-clipboard-data"></i>
+                  </div>
+                  <h4>Ullamco laboris ladore pan</h4>
+                  <p>
+                    Excepteur sint occaecat <br> cupidatat non proident, <br> sunt in
+                    culpa qui officia <br> deserunt
+                  </p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="tab2">
+                  <div class="icons">
+                    <i class="bi bi-clipboard-data"></i>
+                  </div>
+                  <h4>Labore consequatur incidid dolore</h4>
+                  <p>
+                    Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut
+                    maiores omnis facere
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
