chef section is over

--- a/index.html
+++ b/index.html
@@ -879,7 +879,109 @@
         </div>
       </div>
     </section>
-    
+
+    <!-- Chef section  -->
+
+    <section id="chefs" class="chefs mt-5">
+      <div class="container-fluid d-flex flex-column align-items-center  bg-secondary-subtle pb-5">
+        <div class="chefs-header text-center">
+          <h5 class="pt-5 fs-6">CHEFS</h5>
+          <h1 class="sem fs-3 fw-lighter">Our <span>Proffesional </span>Chefs</h1>
+        </div>
+
+        <div class="row">
+          <div class=" d-flex justify-content-evenly gap-4">
+            <div class="d-flex justify-content-center ">
+              <div class="card pera" style="width: 22rem">
+                <img
+                  src="img/chefs/chefs-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+
+                <div class="icon">
+                  <i class="bi bi-twitter-x"></i>
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-instagram"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+                <div class="wave">
+                  <img src="img/team-shape.svg" alt="" />
+                </div>
+                <div class="card-body text-center">
+                  <h3>Walter White</h3>
+                  <p class="text-secondary">Master Chef</p>
+                  <p class="card-text">
+                    Velit aut quia fugit et et. Dolorum ea voluptate vel tempore
+                    tenetur ipsa quae aut. Ipsum exercitationem iure minima enim
+                    corporis et voluptate.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <div class="card pera" style="width: 22rem">
+                <img
+                  src="img/chefs/chefs-2.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+
+                <div class="icon">
+                  <i class="bi bi-twitter-x"></i>
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-instagram"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+                <div class="wave">
+                  <img src="img/team-shape.svg" alt="" />
+                </div>
+                <div class="card-body text-center">
+                  <h3>Sarah Jhonson</h3>
+                  <p class="text-secondary">Patissier</p>
+                  <p class="card-text">
+                    Quo esse repellendus quia id. Est eum et accusantium
+                    pariatur fugit nihil minima suscipit corporis. Voluptate sed
+                    quas reiciendis animi neque sapiente.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <div class="card pera" style="width: 22rem">
+                <img
+                  src="img/chefs/chefs-3.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+
+                <div class="icon">
+                  <i class="bi bi-twitter-x"></i>
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-instagram"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+                <div class="wave">
+                  <img src="img/team-shape.svg" alt="" />
+                </div>
+                <div class="card-body text-center">
+                  <h3>William Anderso</h3>
+                  <p class="text-secondary">Cook</p>
+                  <p class="card-text">
+                    Vero omnis enim consequatur. Voluptas consectetur unde qui
+                    molestiae deserunt. Voluptates enim aut architecto porro
+                    aspernatur molestiae modi sapiente.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script
