almost all the styling is over

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
             ></button>
           </div>
 
-          <div class="carousel-inner">
+          <div class="carousel-inner gap-0">
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-4">
@@ -1090,19 +1090,21 @@
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
+          class="pb-3"
         ></iframe>
         <div class="row">
           <div class="col-6">
             <div class="info-box d-flex bg-body-secondary">
               <div class="icon1">
                 <i
-                  class="bi bi-map "
-                  style="color: #ffffff"
+                  class="fas fa-map-marker-alt d-flex"
+                  
+                  style="color: #ffffff; padding-top: 30px; padding-left: 5px; "
                 ></i>
               </div>
               <div class="text1">
                 <h4 class="ms-5">Our Address</h4>
-                <p class="ms-5">A108 Adam Street, New York, NY 535022</p>
+                <p class="ms-5">091 Ramnagar, Gozaria, Mahesana </p>
               </div>
             </div>
           </div>
@@ -1110,8 +1112,8 @@
             <div class="info-box d-flex bg-body-secondary">
               <div class="icon1">
                 <i
-                  class="fa-regular fa-envelope fa-2xl my-5 mx-1"
-                  style="color: #ffffff"
+                  class="fa-regular fa-envelope fa-xl d-flex"
+                  style="color: #ffffff ; padding-top: 37px;"
                 ></i>
               </div>
               <div class="text1">
@@ -1125,8 +1127,8 @@
             <div class="info-box d-flex bg-body-secondary">
               <div class="icon1">
                 <i
-                  class="fa-solid fa-phone fa-2xl my-5 mx-1"
-                  style="color: #ffffff"
+                  class="fas fa-phone fa-xl d-flex"
+                  style="color: #ffffff; padding-top: 37px "
                 ></i>
               </div>
               <div class="text1">
@@ -1140,8 +1142,8 @@
             <div class="info-box d-flex bg-body-secondary">
               <div class="icon1">
                 <i
-                  class="fa-solid fa-share-nodes fa-2xl my-5"
-                  style="color: #fafafa"
+                  class="fa-solid fa-share-nodes fa-xl d-flex"
+                  style="color: #fafafa; padding-top: 37px ;"
                 ></i>
               </div>
               <div class="text1">
@@ -1247,7 +1249,7 @@
 
             <div class="col-3 d-flex">
               <div>
-                <i class="fa-regular fa-clock fa-xl px-2"></i>
+                <i class="fa-regular fa-clock fa-l px-2"></i>
               </div>
               <div>
                 <h5>Opening Hours</h5>
