project is almost over

--- a/index.html
+++ b/index.html
@@ -1092,66 +1092,68 @@
           referrerpolicy="no-referrer-when-downgrade"
           class="pb-3"
         ></iframe>
-        <div class="row">
-          <div class="col-6">
-            <div class="info-box d-flex bg-body-secondary">
+        <div class="d-flex flex-column gap-4">
+          <div class="d-flex gap-4 container">
+            <div
+              class="d-flex text-start align-items-center bg-body-secondary py-1 ms-2"
+              style="padding-left: 100px; padding-right: 100px"
+            >
               <div class="icon1">
                 <i
                   class="fas fa-map-marker-alt d-flex"
-                  
-                  style="color: #ffffff; padding-top: 30px; padding-left: 5px; "
+                  style="color: #ffffff; padding-top: 30px; padding-left: 5px"
                 ></i>
               </div>
-              <div class="text1">
-                <h4 class="ms-5">Our Address</h4>
-                <p class="ms-5">091 Ramnagar, Gozaria, Mahesana </p>
+              <div class="d-flex flex-column gap-0">
+                <h4 class="ms-4 fs-6">Our Address</h4>
+                <p class="ms-4 fs-6">A108 Adam Street, New York, NY 535022</p>
               </div>
             </div>
-          </div>
-          <div class="col-6">
-            <div class="info-box d-flex bg-body-secondary">
+            <div
+              class="d-flex align-items-center bg-body-secondary py-1"
+              style="padding-left: 130px; padding-right: 180px"
+            >
               <div class="icon1">
                 <i
                   class="fa-regular fa-envelope fa-xl d-flex"
-                  style="color: #ffffff ; padding-top: 37px;"
+                  style="color: #ffffff; padding-top: 37px"
                 ></i>
               </div>
               <div class="text1">
-                <h4 class="ms-5">Email Us</h4>
-                <p class="ms-5">contact@example.com</p>
+                <h4 class="ms-4 fs-6">Email Us</h4>
+                <p class="ms-4">contact@example.com</p>
               </div>
             </div>
           </div>
-
-          <div class="col-6">
-            <div class="info-box d-flex bg-body-secondary">
+          <div class="d-flex gap-4 container">
+            <div
+              class="d-flex text-start align-items-center bg-body-secondary py-1 ms-2"
+              style="padding-left: 100px; padding-right: 100px"
+            >
               <div class="icon1">
                 <i
-                  class="fas fa-phone fa-xl d-flex"
-                  style="color: #ffffff; padding-top: 37px "
+                  class="fas fa-map-marker-alt d-flex"
+                  style="color: #ffffff; padding-top: 30px; padding-left: 5px"
                 ></i>
               </div>
-              <div class="text1">
-                <h4 class="ms-5">Call Us</h4>
-                <p class="ms-5">+1 5589 55488 55</p>
+              <div class="d-flex flex-column gap-0">
+                <h4 class="ms-4 fs-6">Our Address</h4>
+                <p class="ms-4 fs-6">A108 Adam Street, New York, NY 535022</p>
               </div>
             </div>
-          </div>
-
-          <div class="col-6">
-            <div class="info-box d-flex bg-body-secondary">
+            <div
+              class="d-flex align-items-center bg-body-secondary py-1"
+              style="padding-left: 130px; padding-right: 180px"
+            >
               <div class="icon1">
                 <i
-                  class="fa-solid fa-share-nodes fa-xl d-flex"
-                  style="color: #fafafa; padding-top: 37px ;"
+                  class="fa-regular fa-envelope fa-xl d-flex"
+                  style="color: #ffffff; padding-top: 37px"
                 ></i>
               </div>
               <div class="text1">
-                <h4 class="ms-5">Opening Hours</h4>
-                <p class="ms-5">
-                  <span class="text-black fw-bold">Mon-Sat:</span> 11AM -
-                  23PM;<span class="text-black fw-bold"> Sunday: </span> Closed
-                </p>
+                <h4 class="ms-4 fs-6">Email Us</h4>
+                <p class="ms-4">contact@example.com</p>
               </div>
             </div>
           </div>
@@ -1211,7 +1213,7 @@
                 type="button"
                 class="btn btn-danger rounded-pill px-5 py-2 my-5"
               >
-                Book a Table
+                Send Message
               </button>
             </div>
           </div>
@@ -1241,8 +1243,10 @@
               <div>
                 <h5>Reservations</h5>
                 <p>
-                  <span class="fw-bold">Phone:</span> +1 5589 55488 55 <br />
-                  <span class="fw-bold"> Email:</span> info@example.com
+                  <span class="fw-bold text-white">Phone:</span> +1 5589 55488
+                  55 <br />
+                  <span class="fw-bold text-white"> Email:</span>
+                  info@example.com
                 </p>
               </div>
             </div>
@@ -1254,8 +1258,9 @@
               <div>
                 <h5>Opening Hours</h5>
                 <p>
-                  <span class="fw-bold">Mon-Sat: 11AM </span> - 23PM <br />
-                  <span class="fw-bold"> Sunday: </span> Closed
+                  <span class="fw-bold text-white">Mon-Sat:</span> 11AM - 23PM
+                  <br />
+                  <span class="fw-bold text-white"> Sunday: </span> Closed
                 </p>
               </div>
             </div>
@@ -1264,17 +1269,37 @@
               <div>
                 <h5>Follow Us</h5>
               </div>
-              <i class="fa-brands fa-twitter boxi"></i>
-              <i class="fa-brands fa-facebook boxi"></i>
-              <i class="fa-brands fa-instagram boxi"></i>
-              <i class="fa-brands fa-linkedin boxi"></i>
+              <a href="https://google.com"
+                ><i
+                  class="fa-brands fa-twitter boxi p-2"
+                  style="border: 1px solid white; border-radius: 30px"
+                ></i
+              ></a>
+              <a href="https://google.com"
+                ><i
+                  class="fa-brands fa-facebook boxi p-2"
+                  style="border: 1px solid white; border-radius: 30px"
+                ></i
+              ></a>
+              <a href="https://google.com"
+                ><i
+                  class="fa-brands fa-instagram boxi p-2"
+                  style="border: 1px solid white; border-radius: 30px"
+                ></i
+              ></a>
+              <a href="https://google.com"
+                ><i
+                  class="fa-brands fa-linkedin boxi p-2"
+                  style="border: 1px solid white; border-radius: 30px"
+                ></i
+              ></a>
             </div>
             <hr class="my-4" />
             <div class="col-12 text-center">
               <p>
                 © Copyright <span class="fw-bold">Yummy.</span> All Rights
                 Reserved <br />
-                Designed by BootstrapMade
+                Designed by BootstrapMade and recreated by Smit
               </p>
             </div>
           </div>
