Some styling canges is done, and project is fully over

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </head>
 
   <body>
-    <header class="fixed-top">
+    <header class="fixed-top" id="home">
       <nav class="navbar navbar-expand-lg">
         <button
           type="button"
@@ -77,27 +77,27 @@
         <div class="collapse navbar-collapse" id="#mymenu">
           <ul class="navbar-nav ms-auto fw-bold text-center">
             <li class="nav-item">
-              <a href="#home" class="nav-link active fs-5">Home</a>
+              <a href="#home" class="nav-link active ">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link fs-5">About</a>
+              <a href="#about" class="nav-link ">About</a>
             </li>
             <li class="nav-item">
-              <a href="#menu" class="nav-link fs-5">Menu</a>
+              <a href="#menu" class="nav-link ">Menu</a>
             </li>
             <li class="nav-item">
-              <a href="#event" class="nav-link fs-5">Events</a>
+              <a href="#event" class="nav-link ">Events</a>
             </li>
             <li class="nav-item">
-              <a href="#chefs" class="nav-link fs-5">Chefs</a>
+              <a href="#chefs" class="nav-link ">Chefs</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link fs-5">Gallery</a>
+              <a href="#" class="nav-link ">Gallery</a>
             </li>
             <li class="nav-item dropdown">
               <a
                 href="#"
-                class="nav-link dropdown-toggle fs-5"
+                class="nav-link dropdown-toggle "
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -112,11 +112,12 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link fs-5">Contact</a>
+              <a href="#" class="nav-link">Contact</a>
             </li>
           </ul>
           <div>
-            <button type="button" class="btn btn-danger rounded-pill px-4 py-2">
+
+            <button type="button" class="btn btn-danger rounded-pill px-4 py-1">
               book a table
             </button>
           </div>
